module(name = "my_bazel_module")

bazel_dep(name = "nanopb", dev_dependency=True)

archive_override(
    module_name = "nanopb",
    urls = ["https://github.com/nanopb/nanopb/archive/e34dfae6f1aeb87cbe1c05a8fb96f5b9cb1034f6.zip"],
    integrity = "sha256-a+rlc9aR9sNF8MfourU1VFf3foRRZo+qlmXfxY0se6s=",
    strip_prefix = "nanopb-e34dfae6f1aeb87cbe1c05a8fb96f5b9cb1034f6",
)
