[package]
name = "lib"
version = "0.1.0"
authors = ["anon <anon@example.org>", "Another Author", "<mail.only@example.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
license-file = "LICENSE"
homepage = "https://example.org"

[dependencies]
log = { git = "https://github.com/rust-lang-nursery/log.git", rev = "43f2c2837f93be1c6ff9ce672a940d28152b09cf" }
