[package]
name = "lib"
version = "0.1.0"
authors = ["anon <anon@example.org>", "Another Author", "<mail.only@example.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
license-file = "LICENSE"
homepage = "https://example.org"

[dependencies]
cfg-if = "0.1.9"

[dev-dependencies]
rand = "0.6.5"

[build-dependencies]
spin = "0.5.0"
